fix resume spacing

--- a/artist/delta/assets/main.css
+++ b/artist/delta/assets/main.css
@@ -760,13 +760,13 @@ p.press a {
 
 .resume-date {
   display: inline-block;
-  width: 20%;
+  width: 10%;
   vertical-align: top;
 }
 
 .resume-content {
   display: inline-block;
-  width: 58%;
+  width: 45%;
   vertical-align: top;
 }
 
